--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "parcel src/index.html --public-url .",
+    "build": "parcel build src/index.html --public-url ."
   },
   "keywords": [],
   "author": "",
